maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:22: error: illegal start of simple expression
  val x : Int = case(0);
                ^ShortestPathMaze:23: error: illegal start of simple expression
  var y : Int = case(1);
                ^